# scitos_RFID_common

scitos_common/: package.xml
scitos_description/: package.xml
scitos_description/launch/: scitos_empty_world.launch  upload_scitos.launch
scitos_description/meshes/: scitos_materials.dae
scitos_description/robots/: scitos.urdf.xacro
scitos_description/urdf/: scitos.urdf.xacro  scitos_diff.urdf.xacro
scitos_msgs/: package.xml
