<?xml version="1.0"?>
<package format="2">
  <name>scitos_common</name>
  <version>0.1.12</version>
  <description>
    This package contains robot-specific definitions of the SCITOS robot such
    as the URDF description of the robot's kinematics and dynamics and 3D
    models of robot components.
  </description>

  <maintainer email="mfernandezcarmona@lincoln.ac.uk">mfernandezcarmona</maintainer>

  <license>BSD</license>

  <url type="website">http://github.com/strands-project/scitos_common</url>

  <author email="l.kunze@cs.bham.ac.uk">Lars Kunze</author>
  <author email="nilsbore@gmail.com">Nils Bore</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>scitos_description</depend>
  <depend>scitos_msgs</depend>

  <export>
    <metapackage/>
  </export>
</package>
