<?xml version="1.0"?>
<package format="2">
  <name>scitos_description</name>
  <version>0.1.12</version>
  <description>
    The scitos_description package contains the description
    (mechanical, kinematic, visual, etc.) of the SCITOS robot.
  </description>

  <maintainer email="mfernandezcarmona@lincoln.ac.uk">mfernandezcarmona</maintainer>

  <license>MIT</license>

  <url type="website">http://github.com/strands-project/scitos_common</url>

  <author email="l.kunze@cs.bham.ac.uk">Lars Kunze</author>
  <author email="nilsbore@gmail.com">Nils Bore</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>joint_state_publisher</depend>
  <depend>robot_state_publisher</depend>
  <depend>robot_pose_publisher</depend>

</package>
