<?xml version="1.0"?>
<package format="2">
  <name>scitos_msgs</name>
  <version>0.1.12</version>
  <description>Messages for the Scitos-G5 using the MIRA framework.</description>

  <maintainer email="mfernandezcarmona@lincoln.ac.uk">mfernandezcarmona</maintainer>

  <author email="cburbridge@gmail.com">cburbridge</author>
  <author email="tkrajnik@lincoln.ac.uk">Tom Krajnik</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>message_generation</depend>
  <depend>std_msgs</depend>

</package>



